force-app/main/default/objects/Customer__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <displayFormat>CID-{00000}</displayFormat>
    <label>Customer ID</label>
    <type>AutoNumber</type>
</CustomField>